# python-team-project

./: README.md  main.py  pyproject.toml
src/: main.py
