[project]
name = "python-team-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = ["poethepoet>=0.34.0", "ruff>=0.11.11"]

[tool.uv]

[tool.poe.tasks]
main = "src/main.py"
format = "ruff format ."
lint = "ruff check --fix ."
